kubernetes/apps/external/home-assistant/service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/service.json
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
  - name: http
    port: 8123
    protocol: TCP
    targetPort: 8123
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/v1/endpoints.json
apiVersion: v1
kind: Endpoints
metadata:
  name: home-assistant
subsets:
- addresses:
  - ip: 192.168.1.55
  ports:
  - name: http
    port: 8123
    protocol: TCP
