kubernetes/apps/external/home-assistant/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
  - name: external
    namespace: network
  hostnames:
  - ha.${SECRET_DOMAIN}
  rules:
  - backendRefs:
    - name: home-assistant
      port: 8123
